# rust-petclinic

./: Cargo.toml  README.md  docker-compose.yml
client/: Cargo.toml  index.html  styles.css
client/src/: main.rs  owners.rs  pet.rs
dto/: Cargo.toml
dto/src/: lib.rs
entity/src/: lib.rs  owner.rs  pet.rs  pet_type.rs  vet.rs  vet_specialty.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_vets_table.rs  m20220101_000005_create_vet_specialties_table.rs  m20220101_000006_populate_vets.rs  m20220101_000011_populate_pets.rs
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: lib.rs  specialty.rs
server/migration/src/: lib.rs  m20220101_000001_create_vets_table.rs  m20220101_000002_index_vets_table.rs  m20220101_000003_create_specialties_table.rs  m20220101_000004_index_specialties_table.rs  m20220101_000005_create_vet_specialties_table.rs  m20220101_000006_populate_vets.rs  m20220101_000007_create_pet_types_table.rs  m20220101_000008_create_owners_table.rs  m20220101_000009_create_pets_table.rs  m20220101_000010_populate_owners.rs  m20220101_000011_populate_pets.rs
server/src/: main.rs
src/: README.md  main.rs
