[package]
name = "petclinic-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version = "0.8.0-beta.7", features = ["suspense"] }
sycamore-router = "0.8.0-beta.7"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
